--- a/scss/theme/_variables.scss
+++ b/scss/theme/_variables.scss
@@ -5,7 +5,7 @@ $primary-font	: 'Poppins', sans-serif;
 
 /*--------------------------- Color variations ----------------------*/
 
-$primary-color	: #fab700;
+$primary-color	: #7fff21;
 $title-color	: #222222;
 $text-color		: #777777;
 
