--- a/css/main.css
+++ b/css/main.css
@@ -1979,7 +1979,7 @@ h1, h2, h3, h4, h5, h6 {
 #header #logo img {
   padding: 0;
   margin: 0;
-  max-width: 200px;
+  max-width: 210px;
 }
 
 @media (max-width: 768px) {
@@ -3625,4 +3625,12 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 .error-page-area .container {
   margin-top: 85px;
+}
+
+@media screen and (min-width: 700px) {
+
+  .img-fluid {
+    margin-left: -35px;
+  }
+  
 }
