uploaded who we are video

--- a/css/main.css
+++ b/css/main.css
@@ -2457,6 +2457,10 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: #fff;
 }
 
+.cat-area {
+  background: #f1f1f1;
+}
+
 .cat-area #hexagon:hover {
   background: #EC008C;
 }
